--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "nedb": "^1.8.0"
+    "firebase": "^8.3.2",
+    "nedb": "^1.8.0",
+    "node-fetch": "^2.6.1"
   }
 }
